[package]
name = "this_is_my_mac_ncm"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
ctor = "0.1.26"
dirs = "4.0.0"
path-absolutize = "3.0.14"
rust-macios = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url-escape = "0.1.1"
zip = "0.6.3"

[build-dependencies]
json = "0.12.4"
